	- Print warning if "source" failed.

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Let eix-sync be tacit on hooks and evaluate them in current shell.
	  This makes hooks more powerful and gives the user the ability to
	  treat redirection manually to some extent, see
	  https://sourceforge.net/tracker/index.php?func=detail&aid=2042001&
	  group_id=128101&atid=710611
	- Fix cache method eix: Do not forget about iuse for each version.

*eix-0.13.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- New cache method "metadata-assign" needed for alt-gentoo, see
	  http://bugs.gentoo.org/show_bug.cgi?id=231808
	- Rename some of the other cache methods to have a consistent scheme
	  (metadata->metadata-flat, portage-2.0->flat, portage-2.1->assign).
	  Also treat internally flat/assign and metadata-flat/assign by the
	  same class, i.e. remove the port2_1_0 directory completely.
	  The obsolete names will keep getting supported for quite a while,
	  but the update-eix output only uses the new names.
	- Rename update-eix-functions.sh into functions-eix.sh
	  I am aware that this will break several user scripts, but these
	  scripts are not so hard to fix either (or you can make a symlink)
	  and getting rid of the obsolete misleading name was long overdue.
	- You now should call "read_functions [args]" after sourcing
	  functions-eix.sh; this will read baselayout's functions.sh with
	  the corresponding [args]. This fixes the error that the "-C"
	  argument was possibly passed to the sourced script in some shells,
	  mistakenly producing non-colored output when the user passed "-C"
	  to some script. In the new manner you can now determine explicitly
	  what should be passed and how.
	- Use python in update-eix-layman to parse layman.cfg for its
	  make.conf, see http://bugs.gentoo.org/show_bug.cgi?id=230788
	- Remove logging support of eix-sync (and drop options -v and -V).
	  This should fix all problems with the emerge --ask option, see